// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[0, 0] 1x1 1`] = `
"
1 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;

exports[`elements nested in transition 1`] = `
"
2 2 1 1 0 0 0 0
2 2 1 1 0 0 0 0
1 1 1 1 0 0 0 0
1 1 1 1 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;

exports[`elements nested in transition 2`] = `
"
0 2 2 1 1 0 0 0
0 2 2 1 1 0 0 0
0 1 1 1 1 0 0 0
0 1 1 1 1 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;

exports[`elements nested in transition 3`] = `
"
0 0 2 2 1 1 0 0
0 0 2 2 1 1 0 0
0 0 1 1 1 1 0 0
0 0 1 1 1 1 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;

exports[`elements nested in transition 4`] = `
"
0 0 0 2 2 1 1 0
0 0 0 2 2 1 1 0
0 0 0 1 1 1 1 0
0 0 0 1 1 1 1 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;

exports[`elements nested in transition 5`] = `
"
0 0 0 0 2 2 1 1
0 0 0 0 2 2 1 1
0 0 0 0 1 1 1 1
0 0 0 0 1 1 1 1
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0
0 0 0 0 0 0 0 0"
`;
